--- a/TableBooking/src/TableBooking/Views/Account/RegisterRestaurant.cshtml
+++ b/TableBooking/src/TableBooking/Views/Account/RegisterRestaurant.cshtml
@@ -1,18 +1,48 @@
-﻿@model TableBooking.Models.AccountViewModels.RegisterRestaurantViewModel
-
-@{
-    Layout = null;
-}
+﻿@model RegisterRestaurantViewModel
 
 <!DOCTYPE html>
 
 <html>
 <head>
-    <title>Restaurant Registration</title>
+    <title>Register</title>
 </head>
 <body>
-<div>
-    <h1>Restaurant Registration</h1>  
-</div>
+    <div>
+        <section>
+            <form asp-controller="Account" asp-action="Register" method="post">
+                <h1>Test Register</h1>
+                <hr />
+                <div asp-validation-summary="All"></div>
+
+                <label asp-for="Login"></label>
+                <div>
+                    <input asp-for="Login" />
+                    <span asp-validation-for="Login"></span>
+                </div>
+
+                <label asp-for="Email"></label>
+                <div>
+                    <input asp-for="Email" />
+                    <span asp-validation-for="Email"></span>
+                </div>
+
+                <label asp-for="Password"></label>
+                <div>
+                    <input asp-for="Password" />
+                    <span asp-validation-for="Password"></span>
+                </div>
+
+                <label asp-for="ConfirmPassword"></label>
+                <div>
+                    <input asp-for="ConfirmPassword" />
+                    <span asp-validation-for="ConfirmPassword"></span>
+                </div>
+
+                <div>
+                    <button type="submit">Log in</button>
+                </div>
+            </form>
+        </section>
+    </div>
 </body>
 </html>
