Bootstrap added Initial layout changes

--- a/TableBooking/src/TableBooking/Views/Account/Register.cshtml
+++ b/TableBooking/src/TableBooking/Views/Account/Register.cshtml
@@ -4,37 +4,35 @@
 @model RegisterViewModel
 
 <section>
-    <form asp-controller="Account" asp-action="Register" method="post">
-        <h1>Test Register</h1>
-        <hr />
-        <div asp-validation-summary="All"></div>
-
-        <label asp-for="Login"></label>
-        <div>
-            <input asp-for="Login" />
-            <span asp-validation-for="Login"></span>
+    <form class="form-horizontal">
+        <div class="form-group">
+            <label class="control-label col-md-2" for="email">Login:</label>
+            <div class="col-md-8">
+                <input type="text" class="form-control" id="login" placeholder="Enter login">
+            </div>
         </div>
-
-        <label asp-for="Email"></label>
-        <div>
-            <input asp-for="Email" />
-            <span asp-validation-for="Email"></span>
+        <div class="form-group">
+            <label class="control-label col-md-2" for="email">Email:</label>
+            <div class="col-md-8">
+                <input type="email" class="form-control" id="email" placeholder="Enter email">
+            </div>
         </div>
-
-        <label asp-for="Password"></label>
-        <div>
-            <input asp-for="Password" />
-            <span asp-validation-for="Password"></span>
+        <div class="form-group">
+            <label class="control-label col-md-2" for="pwd">Password:</label>
+            <div class="col-md-8">
+                <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+            </div>
         </div>
-                
-        <label asp-for="ConfirmPassword"></label>
-        <div>
-            <input asp-for="ConfirmPassword" />
-            <span asp-validation-for="ConfirmPassword"></span>
+        <div class="form-group">
+            <label class="control-label col-md-2" for="pwd">Confirm password:</label>
+            <div class="col-md-8">
+                <input type="password" class="form-control" id="pwd" placeholder="Confirm password">
+            </div>
         </div>
-
-        <div>
-            <button type="submit">Log in</button>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <button type="submit" class="btn btn-default">Log in</button>
+            </div>
         </div>
     </form>
 </section>
