--- a/TableBooking/src/TableBooking/Views/Account/Login.cshtml
+++ b/TableBooking/src/TableBooking/Views/Account/Login.cshtml
@@ -4,30 +4,30 @@
 @model TableBooking.Models.ViewModels.AccountViewModels.LoginViewModel
 
 <section>
-    <form asp-controller="Account" asp-action="Login" method="post">
-        <h1>Test Log In</h1>
-        <hr />
-        <div asp-validation-summary="All"></div>
-
-        <label asp-for="Login"></label>
-        <div>
-            <input asp-for="Login" />
-            <span asp-validation-for="Login"></span>
+    <form class="form-horizontal">
+        <div class="form-group">
+            <label class="control-label col-md-2" for="email">Email:</label>
+            <div class="col-md-8">
+                <input type="email" class="form-control" id="email" placeholder="Enter email">
+            </div>
         </div>
-
-        <label asp-for="Password"></label>
-        <div>
-            <input asp-for="Password" />
-            <span asp-validation-for="Password"></span>
+        <div class="form-group">
+            <label class="control-label col-md-2" for="pwd">Password:</label>
+            <div class="col-md-8">
+                <input type="password" class="form-control" id="pwd" placeholder="Enter password">
+            </div>
         </div>
-
-        <label asp-for="RememberMe">
-            <input asp-for="RememberMe" />
-            @Html.DisplayNameFor(m => m.RememberMe)
-        </label>
-            
-        <div>
-            <button type="submit">Log in</button>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <div class="checkbox">
+                    <label><input type="checkbox"> Remember me</label>
+                </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <button type="submit" class="btn btn-default">Submit</button>
+            </div>
         </div>
     </form>
 </section>
