--- a/TableBooking/src/TableBooking/Views/Shared/_Layout.cshtml
+++ b/TableBooking/src/TableBooking/Views/Shared/_Layout.cshtml
@@ -2,12 +2,48 @@
 
 <html>
 <head>
+    <link rel="stylesheet" href="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css"
+          asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewData["Title"] - Table Booking</title>
 </head>
 <body>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">WebSiteName</a>
+            </div>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">Page 1</a></li>
+                <li><a href="#">Page 2</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            </ul>
+        </div>
+    </nav>
     <div>
         @RenderBody()
     </div>
+
+    <footer>
+        <p>Posted by: Hege Refsnes</p>
+        <p>
+            Contact information: <a href="mailto:someone@example.com">
+                someone@example.com
+            </a>.
+        </p>
+    </footer>
+
+
+
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-2.2.0.min.js"
+            asp-fallback-test="window.jQuery">
+    </script>
+    <script src="https://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/bootstrap.min.js"
+            asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal">
+    </script>
 </body>
 </html>
