--- a/TableBooking/src/TableBooking/Views/Account/Login.cshtml
+++ b/TableBooking/src/TableBooking/Views/Account/Login.cshtml
@@ -3,31 +3,39 @@
 
 @model TableBooking.Models.ViewModels.AccountViewModels.LoginViewModel
 
-<section>
-    <form class="form-horizontal">
-        <div class="form-group">
-            <label class="control-label col-md-2" for="email">Email:</label>
-            <div class="col-md-8">
-                <input type="email" class="form-control" id="email" placeholder="Enter email">
+
+<div class="row">
+    <div class="col-xs-4"></div>
+        <div class="col-xs-8">
+            <form asp-controller="Account" asp-action="Login" method="post">
+
+            <h2 class="form-signin-heading">Please sign in</h2>
+            <div asp-validation-summary="All"></div>
+
+            <div class="form-group">
+                <label asp-for="Login"></label>
+                    <div>
+                        <input asp-for="Login" class="form-control" placeholder="Enter login" />
+                        <span asp-validation-for="Login"></span>
+                    </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-md-2" for="pwd">Password:</label>
-            <div class="col-md-8">
-                <input type="password" class="form-control" id="pwd" placeholder="Enter password">
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <div class="checkbox">
-                    <label><input type="checkbox"> Remember me</label>
+
+            <div class="form-group">
+                <label asp-for="Password"></label>
+                <div>
+                    <input asp-for="Password" class="form-control" placeholder="Enter password" />
+                    <span asp-validation-for="Password"></span>
                 </div>
             </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <button type="submit" class="btn btn-default">Submit</button>
-            </div>
-        </div>
-    </form>
-</section>
+
+                <label asp-for="RememberMe">
+                    <input asp-for="RememberMe" />
+                    @Html.DisplayNameFor(m => m.RememberMe)
+                </label>
+
+                <div>
+                    <button type="submit" class="btn btn-default">Log in</button>
+                </div>
+           </form>
+    </div>
+</div>
